test/tests/stages/18_structures/invalid_struct_tags/var_type_undeclared.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(var)
  ;
  return
  const int(0)
  ;
  }
